фикс для деплоя на heroku

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 spring:
   data:
     mongodb:
-      uri: mongodb://localhost:27017/blog
+      uri: ${MONGODB_URI}
       grid-fs-database: images
 logging:
   level:
