--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   data:
     mongodb:
-      #      uri: ${MONGODB_URI}
-      uri: mongodb://localhost:27018/pilot
+      uri: ${MONGODB_URI}
+      #uri: mongodb://localhost:27018/pilot
       grid-fs-database: images
 logging:
   level:
