подключение к проекту CLOUDINARY. Облачная система для хранения файлов, в которую буду загрудать пользовательские файлы

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,12 @@
             <version>27.1-jre</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary-http44</artifactId>
+            <version>1.22.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
